p3/confs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-service
  namespace: argocd
spec:
  rules:
  - http:
      # listen on path /argo-cd on port 8080
      paths:
      - path: /argo-cd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
              
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dev-ingress-service
#   namespace: dev
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: wil-playground
#             port:
#               number: 8888
